# src/routes/register/careerItem.js
@@ -4,12 +4,38 @@ const pool = require("../../database/db");
 
 router.post("/", async (req, res) => {
   /**
-   * #swagger.tags = ['CareerItem']
-   * #swagger.summary = '경력 상세 사항 등록'
-   * #swagger.description = '경력 프로필에 등록하는 경력 상세 사항'
+    #swagger.tags = ['CareerItem']
+    #swagger.summary = '경력 상세 사항 등록'
+    #swagger.description = '경력 프로필에 등록하는 경력 상세 사항'
+    #swagger.requestBody = {
+        required: true,
+        content: {
+            "application/json": {
+                schema: {
+                  "type": "object",
+                    properties: {
+                      title: { type: 'string', description: '경력 제목' },
+                      startYear: { type: 'integer', description: '경력 시작 연도' },
+                      startMonth: { type: 'integer', description: '경력 시작 월' },
+                      endYear: { type: 'integer', description: '경력 종료 연도' },
+                      endMonth: { type: 'integer', description: '경력 종료 월' },
+                      content: { type: 'string', description: '경력 상세 내용' }
+                    },
+                    required: ['title', 'startYear', 'startMonth', 'endYear', 'endMonth', 'content']
+                },
+                example: {
+                    "title": "경력 제목",
+                    "startYear": 1993,
+                    "startMonth": 12,
+                    "endYear": 2023,
+                    "endMonth": 12,
+                    "content": "장애 아동 사회복지사",
+                },
+            },
+        }
+    }
    */
-  const { title, startYear, startMonth, endYear, endMonth, period, content } =
-    req.body;
+  const { title, startYear, startMonth, endYear, endMonth, content } = req.body;
   if (
     !title ||
     !startYear ||
@@ -31,8 +57,8 @@ router.post("/", async (req, res) => {
     }
 
     const [result] = await pool.query(
-      "INSERT INTO careerItem (userId, title, startYear, startMonth, endYear, endMonth, period, content) VALUES (?, ?, ?, ?, ?, ?, ?, ?)",
-      [userId, title, startYear, startMonth, endYear, endMonth, period, content]
+      "INSERT INTO careerItem (userId, title, startYear, startMonth, endYear, endMonth, content) VALUES (?, ?, ?, ?, ?, ?, ?)",
+      [userId, title, startYear, startMonth, endYear, endMonth, content]
     );
     const [newCareer] = await pool.query(
       "SELECT * FROM careerItem WHERE careerId = ?",
@@ -49,9 +75,23 @@ router.post("/", async (req, res) => {
 
 router.delete("/", async (req, res) => {
   /**
-   * #swagger.tags = ['CareerItem']
-   * #swagger.summary = '경력 상세 사항 삭제'
-   * #swagger.description = '경력 프로필에 등록하는 경력 상세 사항'
+    #swagger.tags = ['CareerItem']
+    #swagger.summary = '경력 상세 사항 삭제'
+    #swagger.description = '경력 프로필에 등록하는 경력 상세 사항'
+    #swagger.requestBody = {
+        required: true,
+        content: {
+            "application/json": {
+                schema: {
+                  "type": "object",
+                    properties: {
+                      careerId: { type: 'integer', description: '경력 항목 아이디' },
+                    },
+                    required: ['careerId']
+                },
+            },
+        }
+    }
    */
   const { careerId } = req.body;
 
